<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
     >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/listLieuEnregistre"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:minWidth="240dip"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/outline_local_parking_black_18dp">
            <AutoCompleteTextView
                android:id="@+id/selectLieuEnregistre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/lieu_enregistre"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutAddresseGeo"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10px"
            android:layout_marginRight="10px"
            android:hint="@string/adresse"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/outline_place_black_24dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textAddresseGeo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/text_name"
            android:minWidth="250dip"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/outline_local_parking_black_18dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutDetail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10px"
            android:layout_marginRight="10px"
            android:hint="@string/detail"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/icons8_note">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</merge>