<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    tools:context=".activities.AccueilActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/activity_main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:theme="@style/ToolBarStyle"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutDate"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="240dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/date"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/icons8_calendrier">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/listLieuEnregistre"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:minWidth="240dip"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/outline_local_parking_black_18dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/selectLieuEnregistre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:hint="@string/lieu_enregistre"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutAddresseGeo"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
                android:hint="@string/adresse"
                app:errorEnabled="true"
                app:startIconDrawable="@drawable/outline_place_black_24dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textAddresseGeo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false" />
            </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutDetail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/detail"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/icons8_note">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false" />
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabGoogleMap"
                style="@style/Widget.MaterialComponents.FloatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_margin="10dp"
                app:backgroundTint="@color/colorPrimary"
                app:tint="@android:color/white"
                app:fabSize="mini"
                app:srcCompat="@drawable/outline_place_black_24dp" />
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabWaze"
                style="@style/Widget.MaterialComponents.FloatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_margin="10dp"
                app:backgroundTint="@color/colorPrimary"
                app:tint="@android:color/white"
                app:fabSize="mini"
                app:srcCompat="@drawable/outline_navigation_black_24dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="vertical">
        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            app:adSize="LARGE_BANNER"
            app:adUnitId="ca-app-pub-4063990686626392/2443435907"></com.google.android.gms.ads.AdView>
        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:menu="@menu/bottom_navigation_menu" />
    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>
